--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/footer.css">
@@ -49,7 +50,10 @@
               <i class="navigation__arrow"></i>
             </a>
           </nav>
-          <button class="action-button">Get Started</button>
+          <button class="action-button header__button">Get Started</button>
+          <button class="header__menu-button">
+            <span class="header__menu-icon"></span>
+          </button>
         </header>
 
 
@@ -62,8 +66,8 @@
        <p class="headline__description">Create live segments and target the right people for messages based on their behaviors.</p>
     
         <div class="headline__actions"> 
-        <button class="action-button">Get Started</button>
-        <button class="headline__learn-more-button">Learn More</button>
+        <button class="headline__action-button action-button">Get Started</button>
+        <button class="headline__action-button headline__learn-more-button">Learn More</button>
        </div>
     </div>
        <img class="headline__banner" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png" alt="Headline Banner">
