--- a/index.html
+++ b/index.html
@@ -73,6 +73,67 @@
           />
         </section>
       </div>
+
+      <!-- audience -->
+      <section class="audience">
+        <div class="audience__details">
+          <h3 class="audience__title">Engage Visitors</h3>
+          <h1 class="audience__subtitle">Understand your audience</h1>
+          <p class="audience__description">
+            Early stage company? Eligible applicants get all of our products for just $49 a month.
+          </p>
+          <div class="audience__buttons">
+            <button class="audience__action-button action-button">Get Started</button>
+            <button class="audience__learn-more-button">Learn More</button>
+          </div>
+        </div>
+        <div class="audience__users-card">
+          <div class="user-card">
+            <figure class="wrapper">
+              <img
+                class="user-card__images images-dev"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
+                alt="Avatar"
+              />
+              <figcaption class="user-card__caption">Developers</figcaption>
+            </figure>
+          </div>
+
+          <div class="user-card">
+            <figure class="wrapper">
+              <img
+                class="user-card__images images-ent"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
+                alt="Avatar"
+              />
+              <figcaption class="user-card__caption">Entertainment</figcaption>
+            </figure>
+          </div>
+
+          <div class="user-card">
+            <figure class="wrapper">
+              <img
+                class="user-card__images images-athl"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
+                alt="Avatar"
+              />
+              <figcaption class="user-card__caption">Athletes</figcaption>
+            </figure>
+          </div>
+
+          <div class="user-card">
+            <figure class="wrapper">
+              <img
+                class="user-card__images images-creat"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
+                alt="Avatar"
+              />
+              <figcaption class="user-card__caption">Creators</figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
+
       <!-- order -->
 
       <section class="order">
@@ -82,17 +143,20 @@
           alt="Window"
         />
         <div class="order__details">
-        <h3 class="order__title">Start your free trial.</h3>
-        <p class="order__text">
-          Get notified about company updates, news and blog posts. We hate spam.
-        </p>
-        <form class="order__form">
-        <input class="order__email" type="email" placeholder="Enter your email">
-        <button class="action-button order__button">Get Started</button>
-      </form>
-        <p class="order__terms">Free 14-day trial · Easy setup · Cancel any time. Check out <a class="order__terms-link "  href="#">Terms of Use.</a></p> 
-      </div>
-    </section>
+          <h3 class="order__title">Start your free trial.</h3>
+          <p class="order__text">
+            Get notified about company updates, news and blog posts. We hate spam.
+          </p>
+          <form class="order__form">
+            <input class="order__email" type="email" placeholder="Enter your email" />
+            <button class="action-button order__button">Get Started</button>
+          </form>
+          <p class="order__terms">
+            Free 14-day trial · Easy setup · Cancel any time. Check out
+            <a class="order__terms-link" href="#">Terms of Use.</a>
+          </p>
+        </div>
+      </section>
 
       <!-- footer -->
 
