--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </figure>
           </div>
 
-          <div class="user-card">
+          <div class="user-card creators">
             <figure class="wrapper">
               <img
                 class="user-card__images images-creat"
