--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="audience__users-card">
-          <div class="user-card">
+          <div class="user-card developer">
             <figure class="wrapper">
               <img
                 class="user-card__images images-dev"
