--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="user-card developer">
             <figure class="wrapper">
               <img
-                class="user-card__images images-dev"
+                class="user-card__images"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
                 alt="Avatar"
               />
@@ -102,7 +102,7 @@
           <div class="user-card">
             <figure class="wrapper">
               <img
-                class="user-card__images images-ent"
+                class="user-card__images"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
                 alt="Avatar"
               />
@@ -113,7 +113,7 @@
           <div class="user-card">
             <figure class="wrapper">
               <img
-                class="user-card__images images-athl"
+                class="user-card__images"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
                 alt="Avatar"
               />
