--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="headline__actions">
               <button class="headline__action-button action-button">Get Started</button>
-              <button class="headline__action-button headline__learn-more-button learn-more-button">
+              <button class="headline__action-button learn-more-button">
                 Learn More
               </button>
             </div>
@@ -84,7 +84,7 @@
           </p>
           <div class="audience__buttons">
             <button class="audience__action-button action-button">Get Started</button>
-            <button class="audience__learn-more-button learn-more-button
+            <button class="learn-more-button
           ">Learn More</button>
           </div>
         </div>
