--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
 
             <div class="headline__actions">
               <button class="headline__action-button action-button">Get Started</button>
-              <button class="headline__action-button learn-more-button">
-                Learn More
-              </button>
+              <button class="learn-more-button headline__learn-more-button">Learn More</button>
             </div>
           </div>
           <img
@@ -84,8 +82,7 @@
           </p>
           <div class="audience__buttons">
             <button class="audience__action-button action-button">Get Started</button>
-            <button class="learn-more-button
-          ">Learn More</button>
+            <button class="learn-more-button">Learn More</button>
           </div>
         </div>
         <div class="audience__users-card">
@@ -210,20 +207,20 @@
             <div class="additional-navigation__column nav-links">
               <h3 class="nav-links__title">Product</h3>
               <ul class="nav-links__list">
-                <li class="nav-links__list-item">Acquire Users</li>
-                <li class="nav-links__list-item">Content Marketing</li>
-                <li class="nav-links__list-item">Website Templates</li>
-                <li class="nav-links__list-item">Customer Management</li>
-                <li class="nav-links__list-item">Virtual Inbox</li>
+                <a href="#" class="nav-links__list-item"> <li>Acquire Users</li> </a>
+                <a href="#" class="nav-links__list-item"> <li>Content Marketing</li> </a>
+                <a href="#" class="nav-links__list-item"> <li>Website Templates</li> </a>
+                <a href="#" class="nav-links__list-item"> <li>Customer Management</li> </a>
+                <a href="#" class="nav-links__list-item"> <li>Virtual Inbox</li> </a>
               </ul>
             </div>
             <div class="additional-navigation__column nav-links">
               <h3 class="nav-links__title">Company</h3>
               <ul class="nav-links__list">
-                <li class="nav-links__list-item">About Foundation</li>
-                <li class="nav-links__list-item">Brand Guidelines</li>
-                <li class="nav-links__list-item">Press Kit</li>
-                <li class="nav-links__list-item">Support</li>
+                <a href="#" class="nav-links__list-item"> <li>Foundation</li> </a>
+                <a href="#" class="nav-links__list-item"> <li>Guidelines</li> </a>
+                <a href="#" class="nav-links__list-item"> <li>Press Kit</li> </a>
+                <a href="#" class="nav-links__list-item"> <li>Support</li> </a>
               </ul>
             </div>
           </div>
